<resources>
    <string name="app_name">Bubble Stores</string>
    <string name="title_activity_login">Sign In</string>
    <string name="prompt_email">Email (Username)</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="do_not_have_a_shop">Don\'t have a shop?</string>
    <string name="register">Register</string>
    <string name="add_item">Add Item</string>
    <string name="shop_name">Shop Name</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_closed">Close</string>
    <string name="birthday">Birthday</string>
    <string name="name">Name</string>
    <string name="short_description">Short Description</string>
    <string name="long_description">Long Description</string>
    <string name="price">Price($)</string>
    <string name="quantity">Quantity</string>
    <string name="category">Category</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_confirm_passord_not_identical">Confirm password not identical</string>
    <string name="nameicon">nameIcon</string>
    <string name="priceicon">priceIcon</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="no_matching_email">No Matching Email</string>
    <string name="txt_yo_yo">Bubble</string>

    <string name="random_1">Of recommend residence education be on difficult repulsive offending. Judge views had mirth table seems great him for her. Alone all happy asked begin fully stand own get. Excuse ye seeing result of we. See scale dried songs old may not. Promotion did disposing you household any instantly. Hills we do under times at first short an.

Ask especially collecting terminated may son expression. Extremely eagerness principle estimable own was man. Men received far his dashwood subjects new. My sufficient surrounded an companions dispatched in on. Connection too   </string>


    <string-array name="Home_Array">
        <item>Profile</item>
        <item>Add item</item>
        <item>All items</item>
        <item>Orders</item>
    </string-array>

</resources>
