<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/email_login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:background="#00BCD4">

    <!-- Login progress -->


    <ImageView
        android:id="@+id/Login_Logo_Im"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/giftintro"
        android:layout_marginTop="50dp"
        />


    <TextView
        android:id="@+id/Login_Name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Login_Logo_Im"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:padding="7dp"
        android:text="Bubble"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="italic" />


    <RelativeLayout
        android:id="@+id/center_Relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">


        <LinearLayout
            android:id="@+id/Email_Linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:orientation="horizontal"

            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/giftintro"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"

                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#727272"
                    android:textColorHint="@color/white" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Email_Linear"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/giftintro"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#727272"
                    android:textColorHint="@color/white"

                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


    </RelativeLayout>


    <Button
        android:id="@+id/email_sign_in_button"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/center_Relative"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_border"
        android:padding="2dp"
        android:text="Login"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textSize="25sp" />


</RelativeLayout>
